plugins {
    id("org.jetbrains.kotlin.jvm") version "2.2.20"
    id 'java'
    id 'maven-publish'
    id 'com.gradleup.shadow' version "9.1.0"
}

group = 'dev.boooiil.historia'
version = '1.0.8-SNAPSHOT'

base {
    archivesName = 'Historia-Core'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.boobot.org/releases' }
    maven { url = 'https://jitpack.io' }
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://maven.enginehub.org/repo/' }
    maven { url = 'https://repo.glaremasters.me/repository/towny/' }
}

dependencies {

    // Test dependencies
    testImplementation 'org.yaml:snakeyaml:2.5'
    testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.76.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'

    // Runtime + compile
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation 'com.mysql:mysql-connector-j:9.4.0'
    implementation 'org.xerial:sqlite-jdbc:3.48.0.0'
    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.1.0-SNAPSHOT'
    compileOnly 'com.palmergames.bukkit.towny:towny:0.101.1.0'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7.1'
    implementation 'net.md-5:bungeecord-chat:1.16-R0.4'
    implementation 'com.zaxxer:HikariCP:6.2.1'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.16'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.jar {
    duplicatesStrategy = DuplicatesStrategy.WARN
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}


tasks.test {
    systemProperty 'org.slf4j.simpleLogger.defaultLogLevel', 'WARN'
    useJUnitPlatform()
}

// Shade equivalent for including HikariCP
tasks.shadowJar {
    archiveClassifier.set('')
    dependencies {
        include(dependency('com.zaxxer:HikariCP'))
        include(dependency('org.jetbrains.kotlin:kotlin-stdlib'))
    }
}

// Copy jar to server/plugins (like maven-resources-plugin)
// tasks.register('copyToServer', Copy) {
//     dependsOn(tasks.shadowJar)
//     from(tasks.shadowJar.get().archiveFile)
//     into(System.getenv('SERVER') + '/plugins')
// }

// Publication (like distributionManagement + maven-deploy-plugin)
publishing {
    repositories {
        maven {
            url = uri("https://maven.boobot.org/releases")
            credentials {
                username = findProperty("mavenUser") ?: System.getenv("MAVEN_USER")
                password = findProperty("mavenPassword") ?: System.getenv("MAVEN_PASSWORD")
            }
        }
    }
}
